# krishimitra

./: README.md  app.py  pyproject.toml
config/: config.py
pages/: 1_Crop_Page.py  2_Crop_page_new.py
services/: gemini_client.py
